Fix overflow in items title

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -5,6 +5,11 @@
 // file can hold Sass mixins, functions, and placeholder classes to be imported
 // and used throughout the application.
 
+ion-label > h2 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .modal-fullscreen {
   .modal-wrapper {
     display: block;
